# Career-agent

./: .env.example  .gitignore  README.md  app.py  career_agent.py  career_tools.py  pyproject.toml  test_cases.py  test_results.json
diagrams/: architecture_diagram.html
me/: summary.txt
reports/: prompt_documentation.md  report.md
